Подключили библиотеку классов, изменили файл Program.cs в главном проектe

--- a/ConsoleApplication3.csproj
+++ b/ConsoleApplication3.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="ProkatLibrary\ProkatLibrary.csproj">
+      <Project>{bf4514ea-6fef-4317-8024-9f7421c0d51b}</Project>
+      <Name>ProkatLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
